[package]
name = "jenner-macro"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Macro implementations for jenner"
repository = "https://github.com/conradludgate/jenner"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8.4"

[dependencies.syn]
version = "1.0"
default-features = false
features = [
    "full",
    "parsing",
    "visit-mut",
    "printing",
    "clone-impls",
    "proc-macro"
]
