[package]
name = "jenner-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jenner = { version = "=0.1.5", path = "../jenner" }
tokio = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
