[package]
name = "jenner"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Tools for working with generators to work with both iterators and streams"
repository = "https://github.com/conradludgate/jenner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jenner-macro = { version = "=0.1.5", path = "../jenner-macro" }
futures-core = "0.3"
pin-project = "1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
