[package]
name = "jenner"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Tools for working with generators to work with both iterators and streams"
repository = "https://github.com/conradludgate/jenner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jenner-macro = { version = "=0.2.0", path = "../jenner-macro" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
