[package]
name = "streams-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streams-generator = { version = "=0.1.0", path = "../streams" }
tokio = { version = "1.0", features = ["full"] }
pin-project = "1"
futures-core = "0.3"
futures-util = "0.3"
