[package]
name = "streams-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streams-generator-macro = { version = "=0.1.0", path = "../streams-macro" }
futures-core = "0.3"
pin-project = "1"
